--- a/practiceSorting.html
+++ b/practiceSorting.html
@@ -6,5 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem voluptatum
+      perspiciatis labore recusandae alias, velit libero, reiciendis atque dolor
+      distinctio cupiditate aspernatur beatae aut consequuntur officia.
+      Consequuntur blanditiis iusto numquam eveniet iste itaque veritatis nulla,
+      labore at a porro tempore.
+    </p>
+  </body>
 </html>
